Moved card initialization to configuration

--- a/BlazorGame/appsettings.json
+++ b/BlazorGame/appsettings.json
@@ -6,5 +6,47 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cards": [
+    {
+      "Name": "Monkey",
+      "Color": "primary",
+      "Suit": "monkey"
+    },
+    {
+      "Name": "Monkey",
+      "Color": "primary",
+      "Suit": "monkey"
+    },
+    {
+      "Name": "Panda",
+      "Color": "secondary",
+      "Suit": "panda"
+    },
+    {
+      "Name": "Panda",
+      "Color": "secondary",
+      "Suit": "panda"
+    },
+    {
+      "Name": "Spider",
+      "Color": "danger",
+      "Suit": "spider"
+    },
+    {
+      "Name": "Spider",
+      "Color": "danger",
+      "Suit": "spider"
+    },
+    {
+      "Name": "Tiger",
+      "Color": "warning",
+      "Suit": "tiger"
+    },
+    {
+      "Name": "Tiger",
+      "Color": "warning",
+      "Suit": "tiger"
+    }
+  ]
 }
